fixing horizontal scroll issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+	overflow-x: hidden;
+}
+
 .navLink:hover {
 	transform: scale(1.02);
 }
